edited some of scripting to work on the chatgpt page and added the ai-grammar app from Ria

--- a/scripting/manifest.json
+++ b/scripting/manifest.json
@@ -7,6 +7,6 @@
     "service_worker": "sw.js"
   },
   "permissions": ["scripting", "webNavigation", "storage"],
-  "host_permissions": ["https://example.com/*"],
+  "host_permissions": ["https://chatgpt.com/*"],
   "action": {}
 }
