--- a/userScripts/manifest.json
+++ b/userScripts/manifest.json
@@ -17,7 +17,7 @@
   "host_permissions": ["https://chatgpt.com/*", "https://gemini.api/*", "https://*.googleapis.com/*", "https://www.perplexity.ai/*"],
   "web_accessible_resources": [
     {
-      "resources": ["buttons.html", "icons/upPersimmon.png"],
+      "resources": ["buttons.html", "icons/*"],
       "matches": ["https://chatgpt.com/*", "https://www.perplexity.ai/*"]
     }
   ],
