--- a/userScripts/manifest.json
+++ b/userScripts/manifest.json
@@ -27,6 +27,10 @@
       "48": "icons/icons.png",
       "128": "icons/icons.png"
     }
+  },
+  "icons": {
+    "16": "icons/icons.png",
+    "48": "icons/icons.png",
+    "128": "icons/icons.png"
   }
-  
 }
